samples/_failures_safe/1761154680_9b617e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7cce7f36.c: In function ‘main’:
./samples/SAFE/__tmp_7cce7f36.c:153:5: error: expected expression at end of input
  153 |     if (scanf("%d", &choice) !=
      |     ^~
./samples/SAFE/__tmp_7cce7f36.c:153:5: error: expected declaration or statement at end of input
